Videos no longer cause poor layout on mobile.

--- a/style.scss
+++ b/style.scss
@@ -257,7 +257,8 @@ footer {
 }
 
 iframe {
-  width: 560px;
+  width: 100%;
+  max-width: 560px;
   height: 315px;
 }
 
